--- a/src/front/index.html
+++ b/src/front/index.html
@@ -3,6 +3,10 @@
         
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+        <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+        <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
         <script src="app.js" type="text/javascript" defer></script>
     </head>
 
@@ -13,6 +17,9 @@
                 padding: 0;
             }
         </style>
-        <div id="map" style="width: 100vw; height: 100vh"></div>
+
+        <div id="map" style="width: 100vw; height: 100vh">
+            <input type="text" />
+        </div>
     </body>
 </html>
