--- a/src/front/index.html
+++ b/src/front/index.html
@@ -3,23 +3,39 @@
         
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-        <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-        <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
         <script src="app.js" type="text/javascript" defer></script>
+        <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-            }
-        </style>
 
-        <div id="map" style="width: 100vw; height: 100vh">
-            <input type="text" />
+        <div id="map" style="width: 100vw; height: 100vh"></div>
+        <div id="menu">
+            <div>
+                <span id="menu-text">Recharge electrique</span>
+            </div>
+            <form id="path-form" method="post">
+                    <div>
+                        <label for="start">Point de départ</label>
+                        <input type="text" id="start" name="start" placeholder="Départ">
+                        <div class="suggestions">
+
+                        </div>
+                    </div>
+                    <div>
+                        <label for="end">Point d'arrivée</label>
+                        <input type="text" id="end" name="end" placeholder="Arrivée">
+                        <div class="suggestions">
+                            
+                        </div>
+                    </div>
+
+                    <div id="vehicules">
+                        <h2>Choississez votre voiture</h2>
+                    </div>
+
+                    <button type="submit" id="form-submit">Calculer l'itinéraire</button>
+            </form>
         </div>
     </body>
 </html>
