(front): suggestions d'adresse

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -19,14 +19,14 @@
                         <label for="start">Point de départ</label>
                         <input type="text" id="start" name="start" placeholder="Départ">
                         <div class="suggestions">
-
+                            <ul id="startSuggestions"></ul>
                         </div>
                     </div>
                     <div>
                         <label for="end">Point d'arrivée</label>
                         <input type="text" id="end" name="end" placeholder="Arrivée">
                         <div class="suggestions">
-                            
+                            <ul id="endSuggestions"></ul>
                         </div>
                     </div>
 
