--- a/src/front/index.html
+++ b/src/front/index.html
@@ -34,7 +34,7 @@
                         <h2>Choississez votre voiture</h2>
                         <div id="car-list">
                             <template id="vehicle-template">
-                                <div class="flex items-center rounded-lg">
+                                <div class="carContainer flex items-center rounded-lg">
                                     <img>
                                     <div>
                                         <h3></h3>
