--- a/src/front/index.html
+++ b/src/front/index.html
@@ -5,6 +5,7 @@
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
         <script src="app.js" type="text/javascript" defer></script>
         <link rel="stylesheet" href="style.css" />
+        <script src="https://unpkg.com/@turf/turf"></script>
     </head>
 
     <body>
