--- a/src/front/index.html
+++ b/src/front/index.html
@@ -3,6 +3,7 @@
         
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+        <script src="drawing.js" type="text/javascript" defer></script>
         <script src="app.js" type="text/javascript" defer></script>
         <link rel="stylesheet" href="style.css" />
         <script src="https://unpkg.com/@turf/turf"></script>
