--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
         <script src="drawing.js" type="text/javascript" defer></script>
         <script src="app.js" type="text/javascript" defer></script>
         <link rel="stylesheet" href="style.css" />
-        <script src="https://unpkg.com/@turf/turf"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     </head>
 
     <body>
 
         <div id="map" style="width: 100vw; height: 100vh"></div>
-        <div id="menu">
+        <div id="menu" class="container">
             <form id="path-form" method="post">
                     <div>
-                        <label for="start">Point de départ</label>
-                        <input type="text" id="start" name="start" placeholder="Départ">
+                        <label for="start" class="form-label">Point de départ</label>
+                        <input type="text" id="start" name="start" placeholder="Départ" class="form-control">
                         <div class="suggestions">
                             <ul id="startSuggestions"></ul>
                         </div>
                     </div>
                     <div>
-                        <label for="end">Point d'arrivée</label>
-                        <input type="text" id="end" name="end" placeholder="Arrivée">
+                        <label for="end" class="form-label">Point d'arrivée</label>
+                        <input type="text" id="end" name="end" placeholder="Arrivée" class="form-control">
                         <div class="suggestions">
                             <ul id="endSuggestions"></ul>
                         </div>
@@ -47,7 +47,7 @@
                         </div>
                     </div>
 
-                    <button type="submit" id="form-submit">Calculer l'itinéraire</button>
+                    <button type="submit" id="form-submit" class="btn btn-primary">Calculer l'itinéraire</button>
             </form>
         </div>
     </body>
