--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                         </div>
                     </div>
 
-                    <div id="vehicules" class="flex flex-wrap">
+                    <div id="vehicules" class="d-flex flex-wrap">
                         <h2>Choississez votre voiture</h2>
                         <div id="car-list">
                             <template id="vehicle-template">
-                                <div class="carContainer flex items-center rounded-lg">
+                                <div class="carContainer d-flex align-content-center items-center">
                                     <img>
                                     <div>
-                                        <h3></h3>
-                                        <p></p>
+                                        <h6></h6>
+                                        <p class="d-inline"></p>
                                         <p>
                                             Autonomie : <span class="vehicle-range"></span> km (min)
                                         </p>
