--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                         <h6></h6>
                                         <p class="d-inline"></p>
                                         <p>
-                                            Autonomie : <span class="vehicle-range"></span> km (min)
+                                            Autonomie : <span class="vehicle-range"></span> km (max)
                                         </p>
                                     </div>
                                 </div>
